<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RetroGames</string>
    <color name="white">#FFFFFF</color>

    <string name="games_tab">Games</string>
    <string name="stats_tab">Statistics</string>
    <string name="hist_tab">History</string>
    <string name="settings_tab">Settings</string>
    <string name="pong_tab">Pong</string>
    <string name="si_tab">Space Invaders</string>

    <string name="general_settings">General</string>
    <string name="level">Game level</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="about_p">About Pong</string>
    <string name="number">Number of balls</string>
    <string name="sudden">Sudden direction change</string>
    <string name="about_i">About Space Invaders</string>
    <string name="shooting">Invaders are shooting us!</string>
    <string name="invader">Now you\'re the invader</string>
    <string-array name="number_balls">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    
    <string name="pong_stats">Pong Statistics</string>
    <string name="matches">Total Matches: </string>
    <string name="won_matches">Won matches: </string>
    
    <string name="scored">You\'ve scored: </string>
    <string name="escored">You\'ve received: </string>
    
    <string name="last_scored">Scores from last match: </string>
    <string name="last_escored">Opponent scores last match: </string>
    
    <string name="si_stats">Total Games: </string>
    <string name="games">Successfully defended: </string>
    <string name="screwed">Invaded: </string>
    
    <string name="enemies">Enemies you\'ve killed: </string>
    <string name="shots">Bullets shot: </string>
    
    <string name="eol">&lt;br />&lt;br /></string>
    
    <string name="first_pong">
        Pong (marketed as PONG) is one of the earliest arcade video games, 
        and is a tennis sports game featuring simple two-dimensional graphics. 
        The game was originally manufactured by Atari Incorporated (Atari), who 
        released it in 1972. &lt;a href="http://en.wikipedia.org/wiki/Allan_Alcorn">Allan Alcorn&lt;/a>
        created Pong as a training exercise assigned to him by Atari co-founder 
        &lt;a href="http://en.wikipedia.org/wiki/Nolan_Bushnell">Nolan Bushnell&lt;/a>. 
        Bushnell based the idea on an electronic ping-pong game included in the 
        &lt;a href="http://en.wikipedia.org/wiki/Magnavox_Odyssey">Magnavox Odyssey&lt;/a>, 
        which later resulted in a lawsuit against Atari.
    </string>
    
    <string name="second_pong">
        After diving into the design of the Magnavox version, Alcorn went on to create his own design
        based on hi knowledge of transistor-transistor logic. Feeling the original Magnavox\'s game was
        too boring, Alcorn added features to give the game more appeal. He divided the paddle into eight segments 
        to change the ball\'s angle of return. He also made the ball accelerate the more it was returned back 
        and forth between paddles; missing the ball reset the speed. Another feature was that the in-game paddles 
        were unable to reach the top of screen. This was caused by a simple circuit that had an inherent defect. 
        Instead of dedicating time to fixing the defect, Alcorn decided it gave the game more difficulty and 
        helped limit the time the game could be played.
    </string>
    
    <string name="third_pong">
        After months of development, Alcorn finally assembled a prototype of the game. In September 1972, Bushnell 
        and Alcorn installed the Pong prototype at a local bar, Andy Capp\'s Tavern. Bushnell and Alcorn placed the 
        prototype on one of the tables near the other entertainment machines: a jukebox, pinball machines, and Computer Space.
        The game was well received the first night and its popularity continued to grow over the next one and a 
        half weeks. Bushnell then went on a business trip to Chicago. A few days later, the prototype began 
        exhibiting complications and Gattis contacted Alcorn to fix it. Upon inspecting the machine, Alcorn 
        discovered the mechanisms had jammed from an overflow of quarters.
    </string>
    
    <string name="last_pong">
        For further information, please go to the wiki page: &lt;a href="http://en.wikipedia.org/wiki/Pong">Pong&lt;/a>.
    </string>
    
    <string name="first_si">
      Space Invaders is an arcade video game designed by &lt;a href="http://en.wikipedia.org/wiki/Tomohiro_Nishikado">Tomohiro Nishikado&lt;/a>
      and released in 1978. Space Invaders is a two-dimensional fixed shooter game in which the player controls a 
      laser cannon by moving it horizontally across the bottom of the screen and firing at descending aliens. 
      The aim is to defeat five rows of eleven aliens—some versions feature different numbers—that move horizontally 
      back and forth across the screen as they advance towards the bottom of the screen. The player defeats an 
      alien, and earns points, by shooting it with the laser cannon. As more aliens are defeated, the aliens\' 
      movement and the game\'s music both speed up. Defeating the aliens brings another wave that is more difficult, a loop 
      which can continue indefinitely. The aliens attempt to destroy the cannon by firing at it while they approach the bottom
      of the screen. If they reach the bottom, the alien invasion is successful and the game ends. A special "mystery ship" 
      will occasionally move across the top of the screen and award bonus points if destroyed. The laser cannon is 
      partially protected by several stationary defense bunkers—the number varies by version—that are gradually 
      destroyed by projectiles from the aliens and player.
    </string>
    
    <string name="second_si">
       Tomohiro spent a year designing the game and developing the necessary hardware to produce it. He aimed to create a shooting
       game that featured the same sense of achievement from completing stages and destroying targets, but with more complex graphics.
       Nishikado used a similar layout to that of Breakout, but altered the game mechanics. Rather than bounce a ball to attack static
       objects, players are given the ability to fire projectiles at their own discretion to attack moving enemies.
       Early enemy designs included tanks, combat planes, and battleships. Nishikado, however, was not satisfied with the enemy movements; 
       technical limitations made it difficult to simulate flying. Humans would have been easier to simulate, but Nishikado
       considered shooting them immoral
    </string>
    
    <string name="third_si">
      Because microcomputers in Japan were not powerful enough at the time to perform the complex tasks involved in designing and programming 
      Space Invaders, Nishikado had to design his own custom hardware and development tools for the game.[5][9] He created the arcade board 
      using new microprocessors from the United States. The game uses an Intel 8080 central processing unit, and features raster graphics 
      on a CRT monitor and monaural sound hosted by a combination of analogue circuitry and a Texas Instruments SN76477 sound chip.
      Despite the specially developed hardware, Nishikado was unable to program the game as he wanted—the Control Program board was not 
      powerful enough to display the graphics in color or move the enemies faster—and he considered the development of the hardware the most 
      difficult part of the whole process. While programming the game, Nishikado discovered that the processor was able to render the alien 
      graphics faster the fewer were on screen. Rather than design the game to compensate for the speed increase, he decided to keep it as a 
      challenging gameplay mechanic.
    </string>
    
    <string name="last_si">
        For further information, please go to the wiki page: &lt;a href="http://en.wikipedia.org/wiki/Space_Invaders">Space Invaders&lt;/a>.
    </string>
</resources>
